Ajuste logotipo, criados profiles 'prod' e 'dev'

--- a/src/main/resources/templates/layout/layout-padrao.html
+++ b/src/main/resources/templates/layout/layout-padrao.html
@@ -25,9 +25,9 @@
         <div class="container-fluid">
 
             <div class="navbar-header">
-                <!--<a class="navbar-brand  hidden-xs" href="#">-->
-                    <!--<img alt="Logo" th:src="@{/layout/images/logotipo.jpg}"/>-->
-                <!--</a>-->
+                <a class="navbar-brand  hidden-xs" href="#">
+                    <img alt="Logo" th:src="@{/layout/images/logotipo.png}"/>
+                </a>
 
                 <ul class="nav  navbar-nav">
                     <li>
