--- a/src/main/resources/templates/vinho/pesquisa-vinhos.html
+++ b/src/main/resources/templates/vinho/pesquisa-vinhos.html
@@ -73,14 +73,14 @@
                 </thead>
                 <tbody>
                     <tr th:each="vinho : ${vinhos}">
-                        <td th:text="${vinho.codigo}" class="text-center">1</td>
+                        <td th:text="${vinho.codigo}" class="text-center"></td>
                         <td>
                             <a th:href="@{/vinhos/{codigo}(codigo=${vinho.codigo})}" th:text="${vinho.nome}"
                                sec:authorize="hasRole('ROLE_CADASTRAR_VINHO')"></a>
                             <span th:text="${vinho.nome}" sec:authorize="not hasRole('ROLE_CADASTRAR_VINHO')"></span>
                         </td>
-                        <td th:text="#{|tipoVinho.${vinho.tipo}|}">Tinto</td>
-                        <td th:text="|R$${{vinho.valor}}|" class="text-right">55,00</td>
+                        <td th:text="#{|tipoVinho.${vinho.tipo}|}"></td>
+                        <td th:text="|R$ ${{vinho.valor}}|" class="text-right"></td>
                         <td class="text-center" sec:authorize="hasRole('ROLE_CADASTRAR_VINHO')">
                             <i class="fa  fa-trash" style="cursor:pointer"
                                data-toggle="modal" data-target="#confirmaExclusaoModal"
